--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     header {
       background-color: #7c1c1c;
       color: #fff;
-      padding: 2rem;
+      padding: 1rem;
       text-align: center;
     }
     header h1 {
@@ -120,9 +120,16 @@
       display: block;
       margin-bottom: 0.3rem;
     }
+    .notes-entry a {
+      text-decoration: none;
+      color: inherit;
+    }
     .notes-entry p {
       margin: 0;
       font-style: italic;
+    }
+    .notes-entry a:hover p {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -164,15 +171,15 @@
       <h2>Notes from the Amalverse</h2>
       <div class="notes-entry">
         <time>May 28, 2025</time>
-        <p>"I think most people want to be extraordinary. I just want to be real and useful. Sometimes those overlap."</p>
+        <a href="#"><p>"I think most people want to be extraordinary. I just want to be real and useful. Sometimes those overlap."</p></a>
       </div>
       <div class="notes-entry">
         <time>May 26, 2025</time>
-        <p>"Maybe the truth isn’t a place, but a process. A rhythm you learn to dance to."</p>
+        <a href="#"><p>"Maybe the truth isn’t a place, but a process. A rhythm you learn to dance to."</p></a>
       </div>
       <div class="notes-entry">
         <time>May 24, 2025</time>
-        <p>"I like things that are messy and honest and unfinished. Maybe that’s what I am too."</p>
+        <a href="#"><p>"I like things that are messy and honest and unfinished. Maybe that’s what I am too."</p></a>
       </div>
     </section>
 
