--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
     <section class="about" id="about" data-aos="fade-up">
       <div class="about-text">
         <div class="typing-line">Hi, I’m Amal Zahra.</div>
-        <p>I study Computer Science at Carnegie Mellon University. And I don’t just mean study—I live it, breathe it, reimagine it.</p>
-        <p>I care about logic, yes. But also longing. About intelligence, yes. But also instinct.</p>
-        <p>This space? It’s where code meets consciousness. Welcome to the Amalverse.</p>
+        <p>I’m a computer science undergraduate at Carnegie Mellon University, also pursuing a minor in Tech Entrepreneurship.</p>
+        <p>I love math. And I love AI. And I love to analyze society. But above all, I best describe myself as a visionary and a thinker, with a lot of hope for the future.</p>
+        <p>Welcome to the Amalverse.</p>
       </div>
       <div class="about-photo"></div>
     </section>
