--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
     <section class="about" id="about" data-aos="fade-up">
       <div class="about-text">
         <div class="typing-line">Hi, I’m Amal Zahra.</div>
-        <p>I’m a computer science undergraduate at Carnegie Mellon University, also pursuing a minor in Tech Entrepreneurship.</p>
-        <p>I love math. And I love AI. And I love to analyze society. But above all, I best describe myself as a visionary and a thinker, with a lot of hope for the future.</p>
-        <p>Welcome to the Amalverse.</p>
+        <p>I study Computer Science at Carnegie Mellon University. And I don’t just mean study—I live it, breathe it, reimagine it.</p>
+        <p>I care about logic, yes. But also longing. About intelligence, yes. But also instinct.</p>
+        <p>This space? It’s where code meets consciousness. Welcome to the Amalverse.</p>
       </div>
       <div class="about-photo"></div>
     </section>
@@ -273,10 +273,10 @@
     <a href="https://www.linkedin.com/in/amal-zahra/" target="_blank" aria-label="LinkedIn">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.28c-.97 0-1.75-.79-1.75-1.76s.78-1.76 1.75-1.76 1.75.79 1.75 1.76-.78 1.76-1.75 1.76zm13.5 11.28h-3v-5.5c0-1.1-.9-2-2-2s-2 .9-2 2v5.5h-3v-10h3v1.4c.58-.87 1.56-1.4 2.65-1.4 1.93 0 3.5 1.57 3.5 3.5v6.5z"/></svg>
     </a>
-    <a href="#" aria-label="YouTube">
+    <a href="https://www.youtube.com/@4malzahraa" target="_blank" aria-label="YouTube">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19.6 3.2h-15.2c-2.4 0-4.4 2-4.4 4.4v8.8c0 2.4 2 4.4 4.4 4.4h15.2c2.4 0 4.4-2 4.4-4.4v-8.8c0-2.4-2-4.4-4.4-4.4zm-10.6 12v-6l6 3-6 3z"/></svg>
     </a>
-    <a href="#" aria-label="GitHub">
+    <a href="https://github.com/4malz" target="_blank" aria-label="GitHub">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 .5c-6.6 0-12 5.4-12 12 0 5.3 3.4 9.8 8 11.4.6.1.8-.3.8-.6v-2.1c-3.3.7-4-1.4-4-1.4-.5-1.3-1.1-1.6-1.1-1.6-.9-.6.1-.6.1-.6 1 .1 1.5 1 1.5 1 .9 1.5 2.3 1.1 2.9.8.1-.7.3-1.1.5-1.4-2.6-.3-5.3-1.3-5.3-5.9 0-1.3.5-2.4 1.2-3.2-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.3 1.2.9-.3 1.8-.5 2.7-.5s1.8.2 2.7.5c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8.1 3.1.8.8 1.2 1.9 1.2 3.2 0 4.6-2.7 5.6-5.3 5.9.3.3.5.8.5 1.6v2.3c0 .3.2.7.8.6 4.6-1.6 8-6.1 8-11.4 0-6.6-5.4-12-12-12z"/></svg>
     </a>
   </div>
@@ -349,6 +349,4 @@
     window.addEventListener('resize', resize);
   </script>
 </body>
-</html>
-
 </html>
