--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       width: 300px;
       height: 300px;
       border-radius: 50%;
-      background-image: url('your-image.jpg');
+      background-image: url('WhatsApp Image 2025-06-14 at 03.29.50.jpeg');
       background-size: cover;
       background-position: center;
       box-shadow: 0 4px 15px rgba(0,0,0,0.15);
