--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <section class="about" id="about" data-aos="fade-up">
       <div class="about-text">
         <div class="typing-line">Hi, I’m Amal Zahra.</div>
-        <p>Welcome to my world! I’m Amal Zahra, a computer science undergraduate at Carnegie Mellon University, also pursuing a minor in Tech Entrepreneurship.</p>
+        <p>I’m a computer science undergraduate at Carnegie Mellon University, also pursuing a minor in Tech Entrepreneurship.</p>
         <p>I love math. And I love AI. And I love to analyze society. But above all, I best describe myself as a visionary and a thinker, with a lot of hope for the future.</p>
         <p>Welcome to the Amalverse.</p>
       </div>
