--- a/index.html
+++ b/index.html
@@ -243,9 +243,8 @@
   </style>
 </head>
 <body>
-  <audio id="bg-music" autoplay loop>
+  <audio id="bg-music" controls autoplay loop>
     <source src="background-music.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
   </audio>
   <canvas id="bg-network"></canvas>
   <header>
