--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     }
     @keyframes scroll-carousel {
       0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
+      100% { transform: translateX(-100%); }
     }
     .notes-entry {
       background: #fff;
@@ -261,6 +261,11 @@
   <div class="container">
     <div class="carousel-container" data-aos="fade-up">
       <div class="carousel">
+        <img src="WhatsApp%20Image%202025-05-22%20at%2011.44.12.jpeg" alt="Farewell Speech">
+        <img src="rollercoaster%20pic.jpeg" alt="Rollercoaster">
+        <img src="egypt%20pic.jpeg" alt="Egypt">
+        <img src="castle%20pic.jpeg" alt="Castle">
+        <img src="minion%20high%20five%20pic.jpeg" alt="Minion High Five">
         <img src="WhatsApp%20Image%202025-05-22%20at%2011.44.12.jpeg" alt="Farewell Speech">
         <img src="rollercoaster%20pic.jpeg" alt="Rollercoaster">
         <img src="egypt%20pic.jpeg" alt="Egypt">
