--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     .carousel-track {
       display: flex;
       width: max-content;
+      gap: 1rem;
       animation: scroll-carousel 30s linear infinite;
     }
     
