create highlights section

--- a/index.html
+++ b/index.html
@@ -297,6 +297,33 @@
       <div class="about-photo"></div>
     </section>
 
+    <section class="highlights" data-aos="fade-up">
+      <h2>Highlights</h2>
+      <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
+          <strong>Top in the World</strong><br />
+          Scored highest globally in O Level Mathematics (2023), recognized by Cambridge International.
+        </div>
+        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
+          <strong>Harvard Business Review Author</strong><br />
+          Published research on AI and strategic leadership as a co-author at the Harvard Business Review.
+        </div>
+        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
+          <strong>Founder of Qafla</strong><br />
+          Created a digital platform for deep thinkers and writers in the Global South.
+        </div>
+        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
+          <strong>NYAS Member</strong><br />
+          Selected as a member of the New York Academy of Sciences' 1000 Girls, 1000 Futures program.
+        </div>
+        <div style="background: #fff5f5; border-left: 6px solid #7c1c1c; padding: 1rem; border-radius: 8px;">
+          <strong>Research Intern at LUMS RISE</strong><br />
+          Worked on AI-focused projects with the Research Initiative for Scientific Enhancement team.
+        </div>
+      </div>
+    </section>
+
+    
     <section id="notes" data-aos="fade-up">
       <h2>Notes from the Amalverse</h2>
       <div class="notes-entry">
